--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 venv
+.DS_Store
+terraform/.terraform.lock.hcl
+terraform/.terraform/providers/registry.terraform.io/hashicorp/google-beta/4.18.0/darwin_amd64/terraform-provider-google-beta_v4.18.0_x5
+terraform/.terraform/providers/registry.terraform.io/hashicorp/google/3.60.0/darwin_amd64/terraform-provider-google_v3.60.0_x5
